# aerial-manipulator

./: README.md
MATLAB code/: compute_A_Thrust.m  compute_A_tao.m  compute_Eular_equeation.m  compute_Jaccobi.m  compute_allocate.m
aerial_manipulator/: CMakeLists.txt  package.xml
aerial_manipulator/src/: UAM4_dynamics_control_sim_complete.cpp  UAM4_dynamics_control_sim_static.cpp
rotors_simulator/rotors_control/config/: arm_effort_control.yaml  arm_position_control.yaml  spring.yaml
rotors_simulator/rotors_description/urdf/: firefly.xacro  firefly_base.xacro  multirotor_base(自带).xacro  multirotor_base.xacro  multirotor_base（动力学控制用的）.xacro
rotors_simulator/rotors_gazebo/launch/: MY_UAM_dynamics.launch  spawn_mav_dynamics.launch
rotors_simulator/rotors_gazebo/resource/: arm_control.yaml  lee_controller_firefly.yaml
rotors_simulator/rotors_gazebo/worlds/: basic.world  empty.world
rotors_simulator/rotors_gazebo_plugins/src/: gazebo_mavlink_interface.cpp
机器人模型/: FR05-H101.SLDPRT  FR05-S101.SLDPRT  MX64R+副舵盘.SLDPRT  MX64R.SLDPRT  MX64与连杆连接件.SLDPRT  MX64侧盖.SLDPRT  MX64转XL330转换座.SLDPRT  XL330.SLDPRT  XL330连接函道部件.SLDPRT  XL330连接函道部件（带栖息板）.SLDPRT  函道.SLDPRT  栖息-飞行作业机器人.SLDASM  连杆.SLDPRT
机器人模型/新增两节连杆的版本/: MX64与连杆连接件（220408改进）.SLDPRT  MX64侧盖（220408改进）.SLDPRT  fpx330-h101.SLDPRT  末端架.SLDPRT  栖息-飞行作业机器人.SLDASM  轻杆根架.SLDPRT  连杆(小).SLDPRT
